--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="accessory_version_unsupported">The app does not support the version of protocol used by Raspberry Pi. Please update the app.</string>
     <string name="accessory_permission_denied">You did not permit the app to talk to Raspberry Pi. Re-plug to try again.</string>
     <string name="accessory_open_failed">Failed to open device. Re-plug to try again.</string>
+    <string name="server_is_enabled"><u>But I am sure it\'s enabled!</u></string>
+    <string name="restart_phone">For some reason, the phone is unable to detect Raspberry Pi. Re-plug, or re-start phone, to try again.</string>
     <string name="open_network">This is an open network. No passphrase is required.</string>
     <string name="host_halting">Raspberry Pi is shutting down</string>
     <string name="host_rebooting">Raspberry Pi is rebooting. Connection will be back up soon.</string>
